test/files/pos/11512/A_2.java
public class A_2 extends C { }
