test/files/neg/t11788b/java.java

public class java {
	public static class lang {
		public static class Integer {
		}
	}
}
